--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
 		"karma-chrome-launcher": "3.1.0",
 		"karma-cljs-test": "0.1.0",
 		"karma-junit-reporter": "2.0.1",
-		"shadow-cljs": "2.9.3"
+		"shadow-cljs": "2.9.3",
+		"vega": "5.13.0",
+		"vega-embed": "6.9.0",
+		"vega-lite": "4.13.1"
 	}
 }
