failed attempt to fix vegaTooltip notices in console
TypeError: vegaTooltip.vegaLite is not a function
    at eval (core.cljs:32)
02:26:14.074 core.cljs:20 TypeError: vegaTooltip.vega is not a function
    at eval (core.cljs:44)
02:26:14.318 core.cljs:20 TypeError: vegaTooltip.vega is not a function
    at eval (core.cljs:44)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 		"highlight.js": "9.18.1",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
-		"react-highlight.js": "1.0.7"
+		"react-highlight.js": "1.0.7",
+		"vega-tooltip": "0.23.0"
 	},
 	"devDependencies": {
 		"karma": "4.4.1",
