--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
 	"name": "covid-dashboard",
 	"dependencies": {
 		"d3": "5.12.0",
+		"d3-geo": "1.12.1",
 		"highlight.js": "9.18.1",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
 		"react-highlight.js": "1.0.7",
+		"topojson-client": "3.1.0",
 		"vega-tooltip": "0.23.0"
 	},
 	"devDependencies": {
