--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"dependencies": {
 		"d3": "5.12.0",
 		"d3-geo": "1.12.1",
+		"d3-geo-projection": "2.9.0",
 		"highlight.js": "9.18.1",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
