--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-	"name": "covid-dashboard",
-	"dependencies": {
-		"d3": "5.12.0",
-		"d3-geo": "1.12.1",
-		"d3-geo-projection": "2.9.0",
-		"highlight.js": "9.18.1",
-		"react": "16.13.1",
-		"react-dom": "16.13.1",
-		"react-highlight.js": "1.0.7",
-		"topojson-client": "3.1.0",
-		"vega-tooltip": "0.23.0"
-	},
-	"devDependencies": {
-		"karma": "4.4.1",
-		"karma-chrome-launcher": "3.1.0",
-		"karma-cljs-test": "0.1.0",
-		"karma-junit-reporter": "2.0.1",
-		"shadow-cljs": "2.9.3",
-		"vega": "5.13.0",
-		"vega-embed": "6.9.0",
-		"vega-lite": "4.13.1"
-	}
+  "name": "covid-dashboard",
+  "dependencies": {
+    "d3": "5.12.0",
+    "d3-array": "2.4.0",
+    "d3-geo": "1.12.1",
+    "d3-geo-projection": "2.9.0",
+    "highlight.js": "9.18.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-highlight.js": "1.0.7",
+    "topojson-client": "3.1.0"
+  },
+  "devDependencies": {
+    "karma": "4.4.1",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-cljs-test": "0.1.0",
+    "karma-junit-reporter": "2.0.1",
+    "shadow-cljs": "2.9.3"
+  }
 }
